force-app/main/default/objects/PermissionSetUndoo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>