force-app/main/default/objects/PermissionSetUndoo__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <type>TextArea</type>
</CustomField>